<resources>
    <string name="app_name">HomeSync</string>
    <string name="action_settings">Settings</string>
    <string name="action_remote">Remote</string>
    <string name="ip_adderss_title">Server IP</string>
    <string name="ip_adderss_hint">192.168.0.111</string>
    <string name="port_title">Port</string>
    <string name="port_hint">9999</string>
    <string name="remote_address">Remote Address</string>
    <string name="home_network">Home WiFi</string>
    <string name="home_network_hint">KOR</string>
    <string name="external_address">External IP</string>
    <string name="external_address_hint">8.8.8.8</string>
    <string name="save">Save</string>
    <string name="txt_preferences">Preferences</string>
    <string name="txt_help_dialog_0"/>
    <string name="txt_server_url" />
    <string name="txt_help_dialog_1" />
    <string name="txt_close" />
    <string name="txt_help" />
    <string name="txt_ip_address" />
    <string name="txt_connect" />
    <string name="txt_prefs_copy" />
    <string name="txt_recentlyUsedHosts" />
    <string name="toast_invalidIP" />
    <string name="external_port">External Port</string>
    <string name="patio">Patio</string>
    <string name="dining">Dining</string>
    <string name="kitchen">Kitchen</string>
    <string name="livingroom">Livingroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="down">Down</string>
    <string name="stop">Stop</string>
    <string name="up">Up</string>
    <string name="experimental_ai">Experimental AI</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Please enable location permission</string>
    <string name="ok">OK</string>
    <string name="lights">Lights</string>
    <string name="blinds">Blinds</string>
</resources>
