<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/ip_adderss_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/ip_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ip_adderss_hint"
            android:singleLine="true"
            android:width="200dp" />

            <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/port_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="10dp"
            android:text="@string/port_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/port_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/port_hint"
            android:singleLine="true"
            android:width="200dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/remote_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="10dp"
            android:text="@string/remote_address"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/remote_address_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ip_adderss_hint"
            android:singleLine="true"
            android:width="200dp" >

        </EditText>
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/home_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/home_network"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/home_network_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_network_hint"
            android:singleLine="true"
            android:width="200dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/external_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/external_address"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/external_address_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/external_address_hint"
            android:singleLine="true"
            android:width="200dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/external_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/external_port"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="120dp" />

        <EditText
            android:id="@+id/external_port_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/external_address_hint"
            android:singleLine="true"
            android:width="200dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.48"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="saveSettings"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>